--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 </head>
 <body>
     <h1 style="font-size:3vw">USO DE LISTAS</h1>
-    <h1 style="font-size:1w">Lista ordenada de livros</h1>
+    <h1 style="font-size:1w">lista ordenada de livros</h1>
     <ol start="10">
         <li>Dom Quixote</li>
         <li>1984</li>
         <li>O Senhor dos Anéis</li>
         <li>Cem Anos de Solidão</li>
     </ol>
-    <h1 style="font-size:1w">Lista ordenada de autores</h1>
+    <h1 style="font-size:1w">lista ordenada de autores</h1>
     <ol type = "A" start="5">
         <li>Miguel de Cervantes</li>
         <li>George Orwell</li>
         <li>J.R.R. Tolkien</li>
         <li>Gabriel García Márquez</li>
     </ol>
-    <h1 style="font-size:1w">Lista NÃO ordenada com quadrado - editoras</h1>
+    <h1 style="font-size:1w">lista NÃO ordenada com quadrado - editoras</h1>
     <ul style="list-style-type:square;">
         <li>Francisco de Robles</li>
         <li>Secker & Warburg</li>
